--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "flyer-ai",
+  "name": "automacao-midias-test",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "24.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.0.0",
+    "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
-  },
-  "engines": {
-    "node": "18.x"
   }
 }
