--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "automacao-midias-test",
   "version": "1.0.0",
   "private": true,
-  "engines": {
-    "node": "24.x"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,13 +9,8 @@
   },
   "dependencies": {
     "next": "14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/react": "^18.2.45",
-    "@types/node": "^20.11.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "openai": "^4.0.0"
   }
 }
-
