--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "openai": "^4.0.0"
+    "openai": "^4.0.0",
+    "puppeteer": "^25.0.0"
   }
 }
