--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "openai": "^4.0.0",
-    "puppeteer": "^23.3.0"
+    "puppeteer": "^23.3.0",
+    "node-html-to-image": "^4.0.0"
   }
 }
